bindings/python/src/libsonare/_ffi_signatures_effects_engine.py


    # Realtime engine / offline DAW engine
    lib.sonare_engine_create.restype = ctypes.c_int32
    lib.sonare_engine_create.argtypes = [ctypes.POINTER(ctypes.c_void_p)]
    lib.sonare_engine_destroy.restype = None
    lib.sonare_engine_destroy.argtypes = [ctypes.c_void_p]
    lib.sonare_engine_prepare.restype = ctypes.c_int32
    lib.sonare_engine_prepare.argtypes = [
        ctypes.c_void_p,
        ctypes.c_double,
        ctypes.c_int,
        ctypes.c_size_t,
        ctypes.c_size_t,
    ]
    lib.sonare_engine_play.restype = ctypes.c_int32
    lib.sonare_engine_play.argtypes = [ctypes.c_void_p, ctypes.c_int64]
    lib.sonare_engine_stop.restype = ctypes.c_int32
    lib.sonare_engine_stop.argtypes = [ctypes.c_void_p, ctypes.c_int64]
    lib.sonare_engine_seek_sample.restype = ctypes.c_int32
    lib.sonare_engine_seek_sample.argtypes = [ctypes.c_void_p, ctypes.c_int64, ctypes.c_int64]
    lib.sonare_engine_seek_ppq.restype = ctypes.c_int32
    lib.sonare_engine_seek_ppq.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_int64]
    lib.sonare_engine_set_tempo.restype = ctypes.c_int32
    lib.sonare_engine_set_tempo.argtypes = [ctypes.c_void_p, ctypes.c_double]
    lib.sonare_engine_set_time_signature.restype = ctypes.c_int32
    lib.sonare_engine_set_time_signature.argtypes = [ctypes.c_void_p, ctypes.c_int, ctypes.c_int]
    lib.sonare_engine_set_loop.restype = ctypes.c_int32
    lib.sonare_engine_set_loop.argtypes = [
        ctypes.c_void_p,
        ctypes.c_double,
        ctypes.c_double,
        ctypes.c_int,
    ]
    lib.sonare_engine_add_parameter.restype = ctypes.c_int32
    lib.sonare_engine_add_parameter.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareParameterInfo),
    ]
    if hasattr(lib, "sonare_engine_clear_parameters"):
        lib.sonare_engine_clear_parameters.restype = ctypes.c_int32
        lib.sonare_engine_clear_parameters.argtypes = [ctypes.c_void_p]
    lib.sonare_engine_parameter_count.restype = ctypes.c_int32
    lib.sonare_engine_parameter_count.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_engine_parameter_info_by_index.restype = ctypes.c_int32
    lib.sonare_engine_parameter_info_by_index.argtypes = [
        ctypes.c_void_p,
        ctypes.c_size_t,
        ctypes.POINTER(SonareParameterInfo),
    ]
    lib.sonare_engine_parameter_info.restype = ctypes.c_int32
    lib.sonare_engine_parameter_info.argtypes = [
        ctypes.c_void_p,
        ctypes.c_uint32,
        ctypes.POINTER(SonareParameterInfo),
    ]
    lib.sonare_engine_set_automation_lane.restype = ctypes.c_int32
    lib.sonare_engine_set_automation_lane.argtypes = [
        ctypes.c_void_p,
        ctypes.c_uint32,
        ctypes.POINTER(SonareAutomationPoint),
        ctypes.c_size_t,
    ]
    lib.sonare_engine_automation_lane_count.restype = ctypes.c_int32
    lib.sonare_engine_automation_lane_count.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_engine_set_markers.restype = ctypes.c_int32
    lib.sonare_engine_set_markers.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineMarker),
        ctypes.c_size_t,
    ]
    lib.sonare_engine_marker_count.restype = ctypes.c_int32
    lib.sonare_engine_marker_count.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_engine_marker_by_index.restype = ctypes.c_int32
    lib.sonare_engine_marker_by_index.argtypes = [
        ctypes.c_void_p,
        ctypes.c_size_t,
        ctypes.POINTER(SonareEngineMarker),
    ]
    lib.sonare_engine_marker.restype = ctypes.c_int32
    lib.sonare_engine_marker.argtypes = [
        ctypes.c_void_p,
        ctypes.c_uint32,
        ctypes.POINTER(SonareEngineMarker),
    ]
    lib.sonare_engine_seek_marker.restype = ctypes.c_int32
    lib.sonare_engine_seek_marker.argtypes = [ctypes.c_void_p, ctypes.c_uint32, ctypes.c_int64]
    lib.sonare_engine_set_loop_from_markers.restype = ctypes.c_int32
    lib.sonare_engine_set_loop_from_markers.argtypes = [
        ctypes.c_void_p,
        ctypes.c_uint32,
        ctypes.c_uint32,
    ]
    lib.sonare_engine_set_metronome.restype = ctypes.c_int32
    lib.sonare_engine_set_metronome.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineMetronomeConfig),
    ]
    lib.sonare_engine_metronome.restype = ctypes.c_int32
    lib.sonare_engine_metronome.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineMetronomeConfig),
    ]
    lib.sonare_engine_count_in_end_sample.restype = ctypes.c_int32
    lib.sonare_engine_count_in_end_sample.argtypes = [
        ctypes.c_void_p,
        ctypes.c_int64,
        ctypes.c_int,
        ctypes.POINTER(ctypes.c_int64),
    ]
    lib.sonare_engine_set_clips.restype = ctypes.c_int32
    lib.sonare_engine_set_clips.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineClip),
        ctypes.c_size_t,
    ]
    lib.sonare_engine_clip_count.restype = ctypes.c_int32
    lib.sonare_engine_clip_count.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_engine_set_capture_buffer.restype = ctypes.c_int32
    lib.sonare_engine_set_capture_buffer.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineCaptureBuffer),
    ]
    lib.sonare_engine_arm_capture.restype = ctypes.c_int32
    lib.sonare_engine_arm_capture.argtypes = [
        ctypes.c_void_p,
        ctypes.c_int,
    ]
    lib.sonare_engine_set_capture_punch.restype = ctypes.c_int32
    lib.sonare_engine_set_capture_punch.argtypes = [
        ctypes.c_void_p,
        ctypes.c_int64,
        ctypes.c_int64,
        ctypes.c_int,
    ]
    lib.sonare_engine_reset_capture.restype = ctypes.c_int32
    lib.sonare_engine_reset_capture.argtypes = [ctypes.c_void_p]
    lib.sonare_engine_capture_status.restype = ctypes.c_int32
    lib.sonare_engine_capture_status.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineCaptureStatus),
    ]
    lib.sonare_engine_set_graph.restype = ctypes.c_int32
    lib.sonare_engine_set_graph.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineGraphSpec),
    ]
    lib.sonare_engine_graph_node_count.restype = ctypes.c_int32
    lib.sonare_engine_graph_node_count.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_engine_graph_connection_count.restype = ctypes.c_int32
    lib.sonare_engine_graph_connection_count.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_engine_process.restype = ctypes.c_int32
    lib.sonare_engine_process.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.c_int,
        ctypes.c_int,
    ]
    lib.sonare_engine_process_with_monitor.restype = ctypes.c_int32
    lib.sonare_engine_process_with_monitor.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.c_int,
        ctypes.c_int,
    ]
    lib.sonare_engine_render_offline.restype = ctypes.c_int32
    lib.sonare_engine_render_offline.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.c_int,
        ctypes.c_int64,
        ctypes.c_int,
    ]
    lib.sonare_engine_bounce_options_default.restype = ctypes.c_int32
    lib.sonare_engine_bounce_options_default.argtypes = [
        ctypes.POINTER(SonareEngineBounceOptions),
    ]
    lib.sonare_engine_bounce_offline.restype = ctypes.c_int32
    lib.sonare_engine_bounce_offline.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineBounceOptions),
        ctypes.POINTER(SonareEngineBounceResult),
    ]
    lib.sonare_free_bounce_result.restype = None
    lib.sonare_free_bounce_result.argtypes = [ctypes.POINTER(SonareEngineBounceResult)]
    lib.sonare_engine_freeze_offline.restype = ctypes.c_int32
    lib.sonare_engine_freeze_offline.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineFreezeOptions),
        ctypes.POINTER(SonareEngineFreezeResult),
    ]
    lib.sonare_engine_drain_telemetry.restype = ctypes.c_int32
    lib.sonare_engine_drain_telemetry.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(SonareEngineTelemetry),
        ctypes.c_size_t,
        ctypes.POINTER(ctypes.c_size_t),
    ]
    if hasattr(lib, "sonare_engine_drain_meter_telemetry"):
        lib.sonare_engine_drain_meter_telemetry.restype = ctypes.c_int32
        lib.sonare_engine_drain_meter_telemetry.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareMeterTelemetryRecord),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_size_t),
        ]
    if hasattr(lib, "sonare_engine_set_parameter"):
        lib.sonare_engine_set_parameter.restype = ctypes.c_int32
        lib.sonare_engine_set_parameter.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
            ctypes.c_float,
            ctypes.c_int64,
        ]
        lib.sonare_engine_set_parameter_smoothed.restype = ctypes.c_int32
        lib.sonare_engine_set_parameter_smoothed.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
            ctypes.c_float,
            ctypes.c_int64,
        ]
    if hasattr(lib, "sonare_engine_push_midi_cc"):
        lib.sonare_engine_push_midi_cc.restype = ctypes.c_int32
        lib.sonare_engine_push_midi_cc.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
            ctypes.c_uint8,
            ctypes.c_uint8,
            ctypes.c_uint8,
            ctypes.c_uint8,
            ctypes.c_int64,
        ]
    if hasattr(lib, "sonare_engine_push_midi_panic"):
        lib.sonare_engine_push_midi_panic.restype = ctypes.c_int32
        lib.sonare_engine_push_midi_panic.argtypes = [
            ctypes.c_void_p,
            ctypes.c_int64,
        ]
    if hasattr(lib, "sonare_engine_set_builtin_instrument"):
        lib.sonare_engine_set_builtin_instrument.restype = ctypes.c_int32
        lib.sonare_engine_set_builtin_instrument.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
            ctypes.POINTER(SonareBuiltinSynthConfig),
        ]
    if hasattr(lib, "sonare_engine_load_soundfont"):
        lib.sonare_engine_load_soundfont.restype = ctypes.c_int32
        lib.sonare_engine_load_soundfont.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_uint8),
            ctypes.c_size_t,
        ]
    if hasattr(lib, "sonare_engine_set_sf2_instrument"):
        lib.sonare_engine_set_sf2_instrument.restype = ctypes.c_int32
        lib.sonare_engine_set_sf2_instrument.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
            ctypes.POINTER(SonareSf2InstrumentConfig),
        ]
    if hasattr(lib, "sonare_engine_clear_midi_instrument"):
        lib.sonare_engine_clear_midi_instrument.restype = ctypes.c_int32
        lib.sonare_engine_clear_midi_instrument.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint32,
        ]
    if hasattr(lib, "sonare_engine_midi_instrument_count"):
        lib.sonare_engine_midi_instrument_count.restype = ctypes.c_int32
        lib.sonare_engine_midi_instrument_count.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_size_t),
        ]
    if hasattr(lib, "sonare_engine_bind_midi_cc"):
        lib.sonare_engine_bind_midi_cc.restype = ctypes.c_int32
        lib.sonare_engine_bind_midi_cc.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint8,
            ctypes.c_uint8,
            ctypes.c_uint32,
            ctypes.c_float,
            ctypes.c_float,
        ]
    if hasattr(lib, "sonare_engine_clear_midi_cc_bindings"):
        lib.sonare_engine_clear_midi_cc_bindings.restype = ctypes.c_int32
